util/llf/LsfReport: Fix Java9+ deprecation for new Float.